[gd_scene load_steps=8 format=3 uid="uid://begcsv01nh6l2"]

[ext_resource type="PackedScene" uid="uid://wve13q0oj3fc" path="res://scenes/player.tscn" id="1_6oggi"]
[ext_resource type="Script" path="res://scripts/Main.gd" id="1_t8ukx"]
[ext_resource type="PackedScene" uid="uid://vof2brg4kswr" path="res://scenes/mob.tscn" id="2_mq2c8"]
[ext_resource type="PackedScene" uid="uid://ddcn6i5l8jokd" path="res://scenes/hud.tscn" id="4_slacq"]
[ext_resource type="AudioStream" uid="uid://nhy7pfx0ar5b" path="res://sounds/House In a Forest Loop.ogg" id="5_4527p"]
[ext_resource type="AudioStream" uid="uid://casdn77wgqpns" path="res://sounds/gameover.wav" id="5_u0m0c"]

[sub_resource type="Curve2D" id="Curve2D_36r3f"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_t8ukx")
mob_scene = ExtResource("2_mq2c8")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.184314, 0.411765, 0.517647, 1)

[node name="Player" parent="." instance=ExtResource("1_6oggi")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_36r3f")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource("4_slacq")]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_4527p")
volume_db = -20.0

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_u0m0c")
volume_db = -10.0

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
